# marimo-hack2

./: .gitignore  README.md  notebook.py  pyproject.toml
src/attention_sink_lab/: __init__.py  head_gate.py  probe.py  prompt_suite.py  simulation.py  sink_swap.py
tests/: test_head_gate.py  test_probe.py  test_prompt_suite.py  test_simulation.py  test_sink_swap.py
