[project]
name = "attention-sink-lab"
version = "0.1.0"
description = "An interactive marimo explainer for attention sinks and over-mixing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "marimo>=0.22.4,<0.23",
  "numpy>=2.0",
  "plotly>=6.1",
  "torch>=2.5",
  "transformers>=5.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "ruff>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/attention_sink_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

